<resources>
    <string name="app_name">Renessans7</string>
    <string name="str_login">Login</string>
    <string name="str_renessans">Renessans-7</string>
    <string name="str_username">username</string>
    <string name="str_password">password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_fullname">F.I.O</string>
    <string name="str_retype_password">retype password</string>
    <string name="str_register">Register me</string>
    <string name="str_error_username_length">username must be between 5 and 20 letters</string>
    <string name="str_error_password_length">password must not be less than 6 letters</string>
    <string name="str_retype_incorrrect">retyped incorrectly</string>
    <string name="str_teacher_group">\'s groups</string>
    <string name="str_teachers">Teachers</string>
    <string name="str_answers">Answers</string>
    <string name="str_fullname_not_filled">Fullname is not correctly filled(First,last,middle names)</string>
    <string name="str_is_teacher">I am a teacher</string>
    <string name="str_network_error">Network connection failed!</string>
    <string name="str_teacher_role">If you register as a teacher, you can create groups and upload tests for your groups</string>
    <string name="str_password_error">Wrong password!</string>
    <string name="str_username_error">Username not found!</string>
    <string name="str_username_occupied">Username already taken!</string>
    <string name="str_my_groups">My groups</string>
    <string name="str_test_for_group">Tests uploaded for this group</string>
    <string name="str_test_results">Test results</string>
    <string name="str_add_a_group">Add a group</string>
    <string name="str_enter_group_s_name">Enter group\'s name</string>
    <string name="str_description_for_the_group">Description for the group</string>
    <string name="str_select_file_uploading_option">Select file-uploading option</string>
    <string name="str_through_phone_storage">Through phone storage</string>
    <string name="str_through_uploaded_files">Through uploaded files</string>
    <string name="str_upload_a_test">Upload a test</string>
    <string name="str_error">Something went wrong!</string>
    <string name="str_add">Add</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_request_sent">Your request has been sent successfully!</string>
    <string name="str_requests_sent_to_join">Requests sent to join</string>
    <string name="str_following_pupils_asked_to_join_your_groups">Following pupils asked to join your groups</string>
    <string name="str_forward_success">Test has been forwarded successfully!</string>
    <string name="str_test_number">Test size</string>
    <string name="str_test_name">Enter test\'s name</string>
    <string name="str_enter_test_answers">Enter test answers</string>
    <string name="str_test_info_insert">Adding test results</string>
    <string name="str_done">Upload test</string>
    <string name="str_test_add_success">Test has been uploaded successfully!</string>
    <string name="str_your_result">Your result</string>
    <string name="str_correct_answers">Correct answers:</string>
    <string name="str_incorrect_answers">Incorrect answers:</string>
    <string name="str_missing_answers">Missing answers:</string>
    <string name="str_back_to_tests">Back to tests</string>
    <string name="str_already_joined">You have already joined to this group!</string>
    <string name="str_my_requests">Your teacher selection requests</string>
    <string name="str_request">Requests of PENDING status</string>
    <string name="str_group_pupils">All pupils in this class</string>
    <string name="str_no_groups">No groups available.\nPress \'+\' to add a group</string>
    <string name="str_no_requests">No requests found!</string>
    <string name="str_no_members">No members in this group.</string>
    <string name="str_no_tests">No tests available\nuploaded to this group.</string>
    <string name="str_no_joined_groups">No joined groups found.\nPress \'+\' to request to join.</string>
    <string name="str_no_pending">No requests of PENDING status.</string>
    <string name="str_no_teachers">No teachers found.</string>
    <string name="str_request_to_join">Request to join</string>
    <string name="str_no_groups_of_teacher">No groups found.</string>
    <string name="str_no_test_result">No test results found.</string>
    <string name="str_removed_success">Removed successfully</string>
    <string name="str_accept_success">Accepted successfully!</string>
    <string name="str_result_of_all_pupils_in_the_group">Result of all pupils in the group</string>
    <string name="str_teacher_selection">Teacher selection</string>
    <string name="str_test_solving">Test Solving</string>
    <string name="str_not_all_answer_inserted">Not all answers inserted.</string>
    <string name="str_field_empty">Test size is not inserted.</string>
    <string name="str_field_empty_group">Empty group name or description</string>
    <string name="str_admin">Admin</string>
    <string name="str_no_pupils">No strange pupils</string>
    <string name="str_error_load">Test\'s pdf file loading error</string>
    <string name="str_locked">Account was locked by admin.</string>
    <string name="str_restore_success">Activated successfully</string>
    <string name="str_editted_success">Group editted successfully.</string>
    <string name="str_error_fetch_data">Error getting group\'s name and description</string>
    <string name="str_update">Save changes</string>
    <string name="str_group_edit">Group editing</string>
    <string name="str_finish">Finish</string>
    <string name="str_00_00">00:00</string>
    <string name="str_get_group_data">Getting group name and description.</string>

</resources>