<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvChapter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="4dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_test_info_insert"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/edtTestName"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/rounded_white_background"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:hint="@string/str_test_name"
        android:imeOptions="actionNext"
        android:paddingHorizontal="8dp"
        android:singleLine="true"
        android:textColorHint="@color/grey_medium"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/edtTestNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvChapter" />

    <EditText
        android:id="@+id/edtTestNumber"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_white_background"
        android:elevation="4dp"
        android:gravity="center"
        android:hint="@string/str_test_number"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:maxLength="2"
        android:paddingHorizontal="12dp"
        android:singleLine="true"
        android:textColorHint="@color/grey_medium"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edtTestName"
        app:layout_constraintTop_toBottomOf="@id/cvChapter" />

    <TextView
        android:id="@+id/tvTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/str_enter_test_answers"
        android:textColor="@color/black_main_grey"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtTestNumber" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTestAnswers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTest"
        tools:listitem="@layout/item_test_answer" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFinish"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/main_blue"
        android:text="@string/str_done"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/rvTestAnswers"
        app:layout_constraintEnd_toEndOf="@id/rvTestAnswers" />

</androidx.constraintlayout.widget.ConstraintLayout>