<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:elevation="4dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EFEFEF">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvChapter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:elevation="4dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_add_a_group"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <EditText
                android:id="@+id/edtGroupName"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/rounded_white_background"
                android:elevation="4dp"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:gravity="center_vertical"
                android:hint="@string/str_enter_group_s_name"
                android:paddingHorizontal="24dp"
                android:textColorHint="@color/grey_medium"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvChapter" />

            <EditText
                android:id="@+id/edtGroupDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/rounded_white_background"
                android:elevation="4dp"
                android:imeOptions="actionDone"
                android:gravity="center_vertical"
                android:hint="@string/str_description_for_the_group"
                android:paddingHorizontal="24dp"
                android:textColorHint="@color/grey_medium"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtGroupName" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="150dp"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_red_8_background"
                android:elevation="4dp"
                android:text="@string/str_cancel"
                android:textSize="14sp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnAdd"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAdd"
                android:layout_width="150dp"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_m_green_background"
                android:elevation="4dp"
                android:text="@string/str_add"
                android:textSize="14sp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnCancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
